@@ -2,6 +2,7 @@
 	- Hide NSFW images in diff viewer (unless NSFW warnings are disabled)
 	- Display related boards in recent posts tooltip op homepage
 	- Added search box on user list
+	- Proper support for multilingual releases
 
 2.4 - 2009-06-07
 	- Release search + browser + filters
